--- a/index.html
+++ b/index.html
@@ -2,22 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS-Weather</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
     <div class="app-wrap">
         <main>
             <section class="location">
                 <div class="city">London, UK</div>
                 <div class="date">Monday, 10 June 2021</div>
-
-
             </section>
             <div class="main-temperature">
                 <div class="temp">8<span>°c</span></div>
@@ -26,13 +23,9 @@
             </div>
         </main>
         <header>
-            <input type="text" autocomplete="off" class="search-box" placeholder="search...">
+            <input type="text" autocomplete="off" class="search-box" placeholder="search..." />
         </header>
-
-
-
     </div>
-
 
     <script src="script.js"></script>
 </body>
